# aztec-cca

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  bids.example.toml  bids.toml  bids.toml.example
.github/workflows/: publish.yaml
abi/: soulbound.json  validation_hook.json
src/: app.rs  auction.rs  bids.rs  blocks.rs  config.rs  logging.rs  main.rs  registry.rs  ticks.rs  transaction.rs  validate.rs
