[package]
name = "aztec-cca"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { version = "1.1.2", features = ["full"] }
tokio = { version = "1.48", features = ["rt-multi-thread", "macros"] }
futures-util = "0.3"
eyre = "0.6"
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["fmt", "env-filter"] }
